# carbonatix

./: carbonatix.py  justfile  pyproject.toml  readme.md  todo.md  update-version.py
src/carbonatix/: __init__.py  __version__.py  co2irms.py  gui.py
src/carbonatix/assets/: pyproject.toml
