[project]
name = "carbonatix"
version = "0.1.0"
description = "GUI and CLI for reproducible processing of carbonate δ13C and δ18O analyses by IRMS"
readme = "readme.md"
authors = [
    { name = "mdaeron", email = "mathieu@daeron.fr" }
]
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "streamlit<1.51",
    "typer>=0.20.0",
    "watchdog>=6.0.0",
    "xlrd>=2.0.2",
]

[project.scripts]
carbonatix = "carbonatix:run"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
